--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "antd-custom-components",
+  "homepage": "https://jbd95.github.io/antd-custom-components",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.21.4",
+    "gh-pages": "^2.1.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build -b master",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
